# cuda-kangaroo

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BERNSTEIN_PAPER_ANALYSIS_REPORT.md  Backup.cpp  BernsteinTable.cpp  BernsteinTable.h  CHANGELOG_v2.8.15.md  CHECKPOINT_COMPRESSION_README.md  CLEANUP_SUMMARY.md  CMakeCache.txt  CMakeLists.txt  CODE_CLEANUP_REPORT.md  COMMAND_LINE_CORRECTIONS.md  COMMAND_LINE_ERRORS_EXPLAINED.md  COMMAND_LINE_QUICK_REFERENCE.md  Check.cpp  CheckpointUtils.cpp  CommonUtils.cpp  CommonUtils.h  Comprehensive_Security_Audit_Verification_Report_20250112.md  Constants.h  CudaErrorHandler.h  GPUMath_baseline.h  HashTable.cpp  HashTable512.cpp  HashTable512.h  HashTable_baseline.cpp  HashTable_baseline.h  HashTable_original.cpp  HashTable_original_utf8.cpp  KANGAROO_CLEANUP_20250722.md  KANGAROO_COMMAND_REFERENCE.md  KANGAROO_COMMAND_REFERENCE_CORRECT.md  Kangaroo.cpp  Kangaroo.h  Kangaroo.sln  KangarooCheckpointIntegration.cpp  KangarooCommon.h  KangarooUtils.cpp  (+89 more)
.backup/: Kangaroo.rar
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.crush/: crush.db-shm  crush.db-wal
.github/chatmodes/: code-reviewer.chatmode.md
.github/workflows/: ci.yml
.kiro/specs/kangaroo-modernization/: design.md  requirements.md  tasks.md  user-rules.md
.trae/dissertation/: Bernstein_Lange_Implementation_Report_v2.md  CUDA-BSGS-Kangaroo架构分析报告_20250131.md  Chat-history.json  Kangaroo代码审计报告_20250127_014000.md  deepseek_markdown_20250727_9c4e23.md  完整学习总结报告_20250127_013000.md  论文图片处理记录_20250127.md  论文学习总结报告_20250127_012500.md
.trae/rules/: project_rules.md
GPU/: CudaErrorHandler.h  CudaMemoryManager.h  GPUCompute.h  GPUEngine.cu  GPUEngine.h  GPUEngine_backup_20250812_175445.cu  GPUMath.h  GPUMathTemplates.h  GeccGPUWrapper.cu  UnifiedEllipticCurve.h  UnifiedGPUMath.h
SECPK1/: GeccAdapter.cpp  GeccAdapter.h  Int.cpp  Int.h  IntMod.cpp  Point.cpp  Point.h  SECP256K1.cpp
backup_before_fix_20250111/: HashTable.h
docs/: puzzle135_implementation_plan_final_20250125.md
gECC/: CMakeLists.txt
gECC/include/: common.h
gECC/include/gecc/: common.h
gECC/include/gecc/arith/: affine_ops_add_details.h  affine_ops_add_details_with_reduce.h  affine_ops_dbl_details.h  affine_ops_dbl_details_with_reduce.h  ec_constants.h  ec_ops_add_details.h  ec_ops_add_details_with_reduce.h  ec_ops_affine_dbl_details.h  ec_ops_affine_dbl_details_with_reduce.h  ec_ops_dbl_1_details.h  ec_ops_dbl_1_details_with_reduce.h  ec_ops_dbl_2_details.h  ec_ops_dbl_2_details_with_reduce.h  ec_ops_dbl_details.h  ec_ops_dbl_details_with_reduce.h  ec_ops_mixed_add_details.h  ec_ops_mixed_add_details_with_reduce.h  ecdsa_constants.h  ecdsa_test_constants.h  fp_constants.h  fp_ops_cc_details.h  fp_test_constants.h
gECC/scripts/: constants.py  constants_generator.py  ec.py  field.py
hash/: sha256.cpp  sha256.h
include/: Kangaroo.h
kangaroo.dir/Release/kangaroo.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  kangaroo.lastbuildstate
optimizations/phase4/: bl_online_solver_v2.h  bl_precompute_table_v2.h  bl_real_ec_generator.h  bl_table_io_v2.h  generate_bl_real_ec_table.cpp
scripts/: make_kangaroo_jobs.py  monitor_puzzle135.py
src/: HashTable.cpp  Kangaroo.cpp  Timer.cpp  main.cpp
src/SECPK1/: Int.cpp  Int.h  IntGroup.cpp  IntGroup.h  Point.cpp  Point.h  Random.cpp  Random.h  SECP256K1.cpp  SECP256k1.h  Timer.cpp
tests/: gecc_adapter_test.cpp  gecc_benchmark.cu  gecc_gpu_test.cu  gecc_kangaroo_integration_test.cpp  gecc_performance_benchmark.cpp  gecc_test.cu  gpu_debug_test.cpp  gpu_termination_debug.cpp  minimal_hashtable_test.cpp  performance_benchmark.cpp  puzzle56_basic_test.cpp  puzzle56_comprehensive_test.cpp  puzzle56_comprehensive_validation.cpp  puzzle56_simple_test.cpp  test_compatibility.cpp  test_gpu_safety.cpp  test_hashtable_safety.cpp  test_memory_safety.cpp  test_unified_randomwalk.cpp
